python/testData/quickFixes/PyAddImportQuickFixTest/betweenStatementAndImportAboveBoundComments/main.py
import argparse

# some comment #
################

print(argparse, <error descr="Unresolved reference 'a'"><caret>a</error>)